# Real-Esports-Watcher-bot

./: client_secret.json  confirm_teams.txt  gmail-python-email-send.json  keep_alive.py  main.py  pyproject.toml  variables.py
cmds/: admin.py  antiping.py  email.py  error_handling.py  moderation.py  other.py  pmsl.py  tier_2_watch.py  tier_3_watch.py  utils.py
